--- a/src/app/components/common/navbar/navbar.component.html
+++ b/src/app/components/common/navbar/navbar.component.html
@@ -14,12 +14,14 @@
             <div class="collapse navbar-collapse">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a routerLink="/" class="nav-link" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+                        <a routerLink="/" class="nav-link" routerLinkActive="active"
+                            [routerLinkActiveOptions]="{exact: true}">
                             Home
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a routerLink="/job-listings" class="nav-link" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+                        <a routerLink="/job-listings" class="nav-link" routerLinkActive="active"
+                            [routerLinkActiveOptions]="{exact: true}">
                             Find Jobs
                         </a>
                     </li>
@@ -29,12 +31,14 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li class="nav-item">
-                                <a routerLink="/companies" class="nav-link" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+                                <a routerLink="/companies" class="nav-link" routerLinkActive="active"
+                                    [routerLinkActiveOptions]="{exact: true}">
                                     Companies List
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a routerLink="/company-details" class="nav-link" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+                                <a routerLink="/company-details" class="nav-link" routerLinkActive="active"
+                                    [routerLinkActiveOptions]="{exact: true}">
                                     Company Details
                                 </a>
                             </li>
@@ -46,12 +50,14 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li class="nav-item">
-                                <a routerLink="/candidates" class="nav-link" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+                                <a routerLink="/candidates" class="nav-link" routerLinkActive="active"
+                                    [routerLinkActiveOptions]="{exact: true}">
                                     Candidates List
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a routerLink="/candidate-details" class="nav-link" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+                                <a routerLink="/candidate-details" class="nav-link" routerLinkActive="active"
+                                    [routerLinkActiveOptions]="{exact: true}">
                                     Candidate Details
                                 </a>
                             </li>
@@ -92,17 +98,17 @@
                                     FAQ
                                 </a>
                             </li>-->
-                           <!-- <li class="nav-item">
+                        <!-- <li class="nav-item">
                                 <a routerLink="/profile-authentication" class="nav-link" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
                                     Login/Register
                                 </a>
                             </li>-->
-                            <!--<li class="nav-item">
+                        <!--<li class="nav-item">
                                 <a routerLink="/forgot-password" class="nav-link" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
                                     Forgot Password
                                 </a>
                             </li>-->
-                            <!-- <li class="nav-item">
+                        <!-- <li class="nav-item">
                                 <a routerLink="/privacy-policy" class="nav-link" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
                                     Privacy Policy
                                 </a>
@@ -125,12 +131,14 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li class="nav-item">
-                                <a routerLink="/blog" class="nav-link" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+                                <a routerLink="/blog" class="nav-link" routerLinkActive="active"
+                                    [routerLinkActiveOptions]="{exact: true}">
                                     Blog Grid
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a routerLink="/blog-details" class="nav-link" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+                                <a routerLink="/blog-details" class="nav-link" routerLinkActive="active"
+                                    [routerLinkActiveOptions]="{exact: true}">
                                     Blog Details
                                 </a>
                             </li>
@@ -139,12 +147,14 @@
                 </ul>
                 <ul class="navbar-nav for-responsive">
                     <li class="nav-item">
-                        <a routerLink="/" class="nav-link" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" (click)="toggleClass()">
+                        <a routerLink="/" class="nav-link" routerLinkActive="active"
+                            [routerLinkActiveOptions]="{exact: true}" (click)="toggleClass()">
                             Home
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a routerLink="/job-listings" class="nav-link" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" (click)="toggleClass()">
+                        <a routerLink="/job-listings" class="nav-link" routerLinkActive="active"
+                            [routerLinkActiveOptions]="{exact: true}" (click)="toggleClass()">
                             Find Jobs
                         </a>
                     </li>
@@ -154,12 +164,14 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li class="nav-item">
-                                <a routerLink="/companies" class="nav-link" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" (click)="toggleClass()">
+                                <a routerLink="/companies" class="nav-link" routerLinkActive="active"
+                                    [routerLinkActiveOptions]="{exact: true}" (click)="toggleClass()">
                                     Companies List
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a routerLink="/company-details" class="nav-link" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" (click)="toggleClass()">
+                                <a routerLink="/company-details" class="nav-link" routerLinkActive="active"
+                                    [routerLinkActiveOptions]="{exact: true}" (click)="toggleClass()">
                                     Company Details
                                 </a>
                             </li>
@@ -171,12 +183,14 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li class="nav-item">
-                                <a routerLink="/candidates" class="nav-link" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" (click)="toggleClass()">
+                                <a routerLink="/candidates" class="nav-link" routerLinkActive="active"
+                                    [routerLinkActiveOptions]="{exact: true}" (click)="toggleClass()">
                                     Candidates List
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a routerLink="/candidate-details" class="nav-link" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" (click)="toggleClass()">
+                                <a routerLink="/candidate-details" class="nav-link" routerLinkActive="active"
+                                    [routerLinkActiveOptions]="{exact: true}" (click)="toggleClass()">
                                     Candidate Details
                                 </a>
                             </li>
@@ -250,33 +264,30 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li class="nav-item">
-                                <a routerLink="/blog" class="nav-link" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" (click)="toggleClass()">
+                                <a routerLink="/blog" class="nav-link" routerLinkActive="active"
+                                    [routerLinkActiveOptions]="{exact: true}" (click)="toggleClass()">
                                     Blog Grid
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a routerLink="/blog-details" class="nav-link" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" (click)="toggleClass()">
+                                <a routerLink="/blog-details" class="nav-link" routerLinkActive="active"
+                                    [routerLinkActiveOptions]="{exact: true}" (click)="toggleClass()">
                                     Blog Details
                                 </a>
                             </li>
                         </ul>
                     </li>
                 </ul>
-                <div class="others-option d-sm-flex align-items-center">
+                <div *ngIf="!isUserLoggedIn;" class="others-option d-sm-flex align-items-center">
                     <div class="option-item">
                         <a routerLink="/candidate" class="default-btn">
-                            <i class="ri-user-3-line"></i>  Candidate 
+                            <i class="ri-user-3-line"></i> Candidate
                         </a>
 
                         <a routerLink="/company" class="default-btn" style="margin-left:10px;">
-                            <i class="ri-user-3-line"></i>  Employer 
+                            <i class="ri-user-3-line"></i> Employer
                         </a>
                     </div>
-                    <!--<div class="option-item">
-                        <a routerLink="/post-a-job" class="default-btn">
-                            Post A Job <i class="ri-briefcase-2-line"></i>
-                        </a>
-                    </div>-->
                 </div>
             </div>
         </nav>
