--- a/src/app/components/pages/emp-account/emp-account.html
+++ b/src/app/components/pages/emp-account/emp-account.html
@@ -2,7 +2,7 @@
 <div class="inner-banner">
     <div class="container">
         <div class="inner-title text-center">
-            <h3>Employ Account Login/Registration</h3>
+            <h3>Company Account Login/Registration</h3>
             <ul>
                 <li>
                     <a routerLink="/">
@@ -22,40 +22,48 @@
             <div class="col-lg-6 col-md-12">
                 <div class="login-form">
                     <h2>Login</h2>
-                    <form method="get" action="https://api.workfromhome.world/candidate_signup?name=Ronit&email_id=ronit@gmail.com&mobile_number=7003622801&password=123">
+                    <form>
                         <div class="form-group">
                             <label>Email</label>
-                            <input type="text" class="form-control" placeholder="Enter your Email">
+                            <input type="text" class="form-control" id="mobile_number" placeholder="Enter your Email">
                         </div>
                         <div class="form-group">
                             <label>Password</label>
-                            <input type="password" class="form-control" placeholder="Password">
+                            <input type="password" class="form-control" id="password" placeholder="Password">
                         </div>
                         <div class="forgot-password-wrap">
                             <a routerLink="/forgot-password" class="lost-your-password">Forgot password?</a>
                         </div>
-                        <button type="submit">Login</button>
+                        <button (click)="onClick()" type="button">Login</button>
                     </form>
                 </div>
             </div>
-            <div class="col-lg-6 col-m d-12">
+            <div class="col-lg-6 col-md-12">
                 <div class="register-form">
                     <h2>Register</h2>
-                    <form method="get" action="https://api.workfromhome.world/">
+                    <form>
                         <div class="form-group">
                             <label>Full Name</label>
-                            <input type="text" class="form-control" placeholder="Full Name">
+                            <input type="text" class="form-control" placeholder="Full Name" id="full_name" name="full_name">
                         </div>
                         <div class="form-group">
                             <label>Email</label>
-                            <input type="email" class="form-control" placeholder="Email">
+                            <input type="email" class="form-control" placeholder="Email" id="email_id">
+                        </div>
+                        <div class="form-group">
+                            <label>Mobile Number (+91)</label>
+                            <input type="number" class="form-control" placeholder="Email" id="register_mobile">
                         </div>
                         <div class="form-group">
                             <label>Password</label>
-                            <input type="password" class="form-control" placeholder="Password">
+                            <input type="password" class="form-control" placeholder="Password" id="register_password">
+                        </div>
+                        <div class="form-group">
+                            <label>Confirm Password</label>
+                            <input type="password" class="form-control" placeholder="Password" id="register_confirm_password">
                         </div>
                         <p class="description">The password should be at least eight characters long. To make it stronger, use upper and lower case letters, numbers, and symbols like ! " ? $ % ^ & )</p>
-                        <button type="submit">Register</button>
+                        <button (click)="registerAccount()" type="button" >Register</button>
                     </form>
                 </div>
             </div>
