--- a/src/app/components/pages/post-a-job-page/post-a-job-page.component.html
+++ b/src/app/components/pages/post-a-job-page/post-a-job-page.component.html
@@ -9,7 +9,7 @@
                         Home
                     </a>
                 </li>
-                <li>Submit Job</li>
+                <li>Create a New Job Listing</li>
             </ul>
         </div>
     </div>
@@ -24,7 +24,7 @@
                     <div class="col-lg-12 col-md-12">
                         <div class="form-group">
                             <label>Job Title <span>*</span></label>
-                            <input type="text" class="form-control">
+                            <input type="text" class="form-control" id="title">
                         </div>
                     </div>
                     <div class="col-lg-12 col-md-12">
@@ -33,14 +33,14 @@
                             <div class="NgxEditor__Wrapper">
                                 <ngx-editor-menu [editor]="editor" [toolbar]="toolbar">
                                 </ngx-editor-menu>
-                                <ngx-editor [editor]="editor" [placeholder]="'Type here...'"></ngx-editor>
+                                <ngx-editor [editor]="editor" [placeholder]="'Type here...'" id="description"></ngx-editor>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-6">
                         <div class="form-group">
                             <label>Category <span>*</span></label>
-                            <select class="form-select">
+                            <select class="form-select" id="category_id">
                                 <option selected>Accounting / Finance</option>
                                 <option value="1">Automotive Jobs</option>
                                 <option value="2">Customer Service</option>
@@ -55,7 +55,7 @@
                     <div class="col-lg-6 col-md-6">
                         <div class="form-group">
                             <label>Type <span>*</span></label>
-                            <select class="form-select">
+                            <select class="form-select" id="type_id">
                                 <option selected>Freelance</option>
                                 <option value="1">Full Time</option>
                                 <option value="2">Internship</option>
@@ -67,13 +67,13 @@
                     <div class="col-lg-6 col-md-6">
                         <div class="form-group">
                             <label>Tag</label>
-                            <input type="text" class="form-control">
+                            <input type="text" class="form-control" id="tags">
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-6">
                         <div class="form-group">
                             <label>Gender <span>*</span></label>
-                            <select class="form-select">
+                            <select class="form-select" id="gender">
                                 <option selected>Both</option>
                                 <option value="1">Female</option>
                                 <option value="2">Male</option>
@@ -83,7 +83,7 @@
                     <div class="col-lg-6 col-md-6">
                         <div class="form-group">
                             <label>Job Apply Type <span>*</span></label>
-                            <select class="form-select">
+                            <select class="form-select" id="">
                                 <option selected>Internal</option>
                                 <option value="1">External URL</option>
                                 <option value="2">By Email</option>
@@ -94,7 +94,7 @@
                     <div class="col-lg-6 col-md-6">
                         <div class="form-group">
                             <label>Salary Type <span>*</span></label>
-                            <select class="form-select">
+                            <select class="form-select" id="salary_type">
                                 <option selected>Monthly</option>
                                 <option value="1">Weekly</option>
                                 <option value="2">Daily</option>
@@ -104,7 +104,7 @@
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-6">
-                        <div class="form-group">
+                        <div class="form-group" id="minimum_salary">
                             <label>Min. Salary <span>*</span></label>
                             <input type="text" class="form-control">
                         </div>
@@ -112,13 +112,13 @@
                     <div class="col-lg-6 col-md-6">
                         <div class="form-group">
                             <label>Max. Salary <span>*</span></label>
-                            <input type="text" class="form-control">
+                            <input type="text" class="form-control" id="maximum_salary">
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-6">
                         <div class="form-group">
                             <label>Experience <span>*</span></label>
-                            <select class="form-select">
+                            <select class="form-select" id="experience">
                                 <option selected>Fresh</option>
                                 <option value="1">1 Year</option>
                                 <option value="2">2 Year</option>
@@ -133,7 +133,7 @@
                     <div class="col-lg-6 col-md-6">
                         <div class="form-group">
                             <label>Career Level <span>*</span></label>
-                            <select class="form-select">
+                            <select class="form-select" id="career_level">
                                 <option selected>Manager</option>
                                 <option value="1">Officer</option>
                                 <option value="2">Student</option>
@@ -145,7 +145,7 @@
                     <div class="col-lg-6 col-md-6">
                         <div class="form-group">
                             <label>Qualification <span>*</span></label>
-                            <select class="form-select">
+                            <select class="form-select" id="qualification">
                                 <option selected>Certificate</option>
                                 <option value="1">Associate Degree</option>
                                 <option value="2">Bachelor Degree</option>
@@ -157,40 +157,42 @@
                     <div class="col-lg-6 col-md-6">
                         <div class="form-group">
                             <label>Introduction Video URL <span>*</span></label>
-                            <input type="text" class="form-control">
+                            <input type="text" class="form-control" id="introduction_video_url">
                         </div>
                     </div>
                     <div class="col-lg-12 col-md-12">
                         <div class="form-group">
                             <label>Application Deadline Date <span>*</span></label>
-                            <input type="date" class="form-control">
+                            <input type="date" class="form-control" id="deadline">
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-6">
                         <div class="form-group">
                             <label>Friendly Address <span>*</span></label>
-                            <input type="text" class="form-control">
+                            <input type="text" class="form-control" id="friendly_address">
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-6">
                         <div class="form-group">
                             <label>Location <span>*</span></label>
-                            <select class="form-select">
+                            <!-- <select class="form-select" id="location">
                                 <option selected>London</option>
                                 <option value="1">Los Angeles</option>
                                 <option value="2">New York</option>
                                 <option value="3">Miami</option>
                                 <option value="4">Paris</option>
-                            </select>
+                            </select> -->
+                            <input type="text" class="form-control" id="location">
+
                         </div>
                     </div>
-                    <div class="col-lg-12 col-md-12">
+                    <!-- <div class="col-lg-12 col-md-12">
                         <div class="form-group">
                             <label>Featured Image <span>*</span></label>
                             <input type="file" id="img" name="img" accept="image/*">
                             <p>Maximum file size: 2 MB</p>
                         </div>
-                    </div>
+                    </div> -->
                     <div class="col-lg-12 col-md-12">
                         <button type="submit" class="default-btn">Submit & Preview</button>
                     </div>
